[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/item_bar/item_bar_0.png" type="Texture" id=1]
[ext_resource path="res://UI/item_bar/item_bar.gd" type="Script" id=2]
[ext_resource path="res://UI/Themes/Shaders and Materials/outline.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/color = Color( 0.192157, 0.184314, 0.227451, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/color = Color( 0.192157, 0.184314, 0.227451, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/color = Color( 0.192157, 0.184314, 0.227451, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/color = Color( 0.192157, 0.184314, 0.227451, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/color = Color( 0.192157, 0.184314, 0.227451, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/color = Color( 0.192157, 0.184314, 0.227451, 1 )
shader_param/width = 1.0
shader_param/pattern = 0
shader_param/inside = false
shader_param/add_margins = true

[node name="item_bar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.57497
margin_bottom = 3.57497
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bar" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -40.0
margin_right = 52.0
texture = ExtResource( 1 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left_icon" type="TextureRect" parent="bar"]
material = SubResource( 1 )
margin_left = 9.0
margin_top = 9.42503
margin_right = 23.0
margin_bottom = 23.425
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = true
expand = true
stretch_mode = 1

[node name="mid_icon" type="TextureRect" parent="bar"]
material = SubResource( 2 )
anchor_left = 0.33
anchor_right = 0.33
margin_left = 8.67999
margin_top = 9.42503
margin_right = 22.68
margin_bottom = 23.425
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right_icon" type="TextureRect" parent="bar"]
material = SubResource( 3 )
anchor_left = 0.65
anchor_right = 0.65
margin_left = 9.4
margin_top = 9.42503
margin_right = 23.4
margin_bottom = 23.425
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -24.0
margin_right = 58.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passive1" type="TextureRect" parent="HBoxContainer"]
material = SubResource( 4 )
margin_bottom = 18.0
stretch_mode = 3

[node name="passive2" type="TextureRect" parent="HBoxContainer"]
material = SubResource( 5 )
margin_left = 4.0
margin_right = 4.0
margin_bottom = 18.0
stretch_mode = 3

[node name="passive3" type="TextureRect" parent="HBoxContainer"]
material = SubResource( 6 )
margin_left = 8.0
margin_right = 8.0
margin_bottom = 18.0
stretch_mode = 3
